...
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id" translatable="false">2218548715047141</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2218548715047141</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="permission_needed">You need to give location permission to view the map</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_start">LoginActivity</string>
    <string name="title_activity_main2">""</string>
...
    <string name="eating_at">%s is eating at %s</string>
    <string name="no_address_found">No address found</string>
    <string name="no_name_found">No name found</string>
    <string name="open_now">Open now</string>
    <string name="closed_now">Closed now</string>
    <string name="opening_hours_for">Opening hours for\u0020</string>
    <string name="ok">OK</string>
    <string name="error_getting_times">Error getting opening times data</string>
    <string name="no_time_data">No additional opening time data is available</string>
    <string name="is_joining">\u0020 is joining!</string>
    <string name="friends_list">Friends List</string>
    <string name="maps_fragment_title">Where should we eat?</string>
    <string name="could_not_get_location">Could not get location</string>
...
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">WEBSITE</string>
    <string name="nav">NAV</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="work_mates">Mates</string>
    <string name="liked">Liked</string>
    <string name="my_workmates">My Workmates</string>
    <string name="all_users">All Users</string>
    <string name="opening_hours">opening hours</string>
    <string name="distance_image">distance image</string>
    <string name="phonecall_image">phonecall image</string>
    <string name="website_image">website image</string>
...
