...
            android:layout_marginTop="8dp"
            android:src="@drawable/com_facebook_profile_picture_blank_portrait"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <EditText
            android:id="@+id/navbarName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
...
            android:singleLine="false"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textIsSelectable="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/navbarEmail"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profPic"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:hint="@string/nav_bar_name"/>

...
