...
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/peopleEatingRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintBottom_toBottomOf="@+id/peopleEatingRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/peopleEatingRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/peopleEatingRecyclerView" />

    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="37dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
